--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -567,7 +567,7 @@ margin-right:30px;</string>
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="currentIndex">
-         <number>5</number>
+         <number>3</number>
         </property>
         <widget class="HomePage" name="homePage">
          <property name="styleSheet">
@@ -1695,7 +1695,7 @@ QComboBox QAbstractItemView {
                    <x>0</x>
                    <y>0</y>
                    <width>948</width>
-                   <height>355</height>
+                   <height>312</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="verticalLayout_20">
@@ -1716,28 +1716,7 @@ QComboBox QAbstractItemView {
                 </widget>
                </widget>
               </item>
-              <item row="0" column="0">
-               <layout class="QVBoxLayout" name="dateVetAnimalEditLayout">
-                <item>
-                 <widget class="QLabel" name="dateVetAnimalEditLabel">
-                  <property name="text">
-                   <string>DATE DU RDV</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="CustomDateTimeEdit" name="dateVetAnimalEdit">
-                  <property name="sizePolicy">
-                   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-                    <horstretch>0</horstretch>
-                    <verstretch>0</verstretch>
-                   </sizepolicy>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
-              </item>
-              <item row="4" column="0" colspan="2">
+              <item row="6" column="0" colspan="2">
                <widget class="QPushButton" name="groupedVetButton">
                 <property name="text">
                  <string>Ajouter un RDV groupé</string>
@@ -1786,6 +1765,34 @@ QComboBox QAbstractItemView {
               </item>
               <item row="1" column="0" colspan="2">
                <widget class="QWidget" name="placeholder" native="true"/>
+              </item>
+              <item row="0" column="0">
+               <layout class="QVBoxLayout" name="dateVetAnimalEditLayout">
+                <item>
+                 <widget class="QLabel" name="dateVetAnimalEditLabel">
+                  <property name="text">
+                   <string>DATE DU RDV</string>
+                  </property>
+                 </widget>
+                </item>
+                <item>
+                 <widget class="CustomDateTimeEdit" name="dateVetAnimalEdit">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                 </widget>
+                </item>
+               </layout>
+              </item>
+              <item row="4" column="0">
+               <widget class="QPushButton" name="groupedPdfButton">
+                <property name="text">
+                 <string>PDF</string>
+                </property>
+               </widget>
               </item>
              </layout>
             </widget>
