--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -572,7 +572,7 @@ margin-right:30px;</string>
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="currentIndex">
-         <number>3</number>
+         <number>5</number>
         </property>
         <widget class="HomePage" name="homePage">
          <property name="styleSheet">
@@ -724,8 +724,8 @@ QCheckBox::indicator:unchecked{
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>984</width>
-               <height>567</height>
+               <width>86</width>
+               <height>84</height>
               </rect>
              </property>
              <property name="styleSheet">
@@ -2149,7 +2149,7 @@ QLineEdit, QDateTimeEdit, QComboBox, QDoubleSpinBox {
           <item row="0" column="0" colspan="2">
            <widget class="QTabWidget" name="settingsTabWidget">
             <property name="currentIndex">
-             <number>1</number>
+             <number>2</number>
             </property>
             <widget class="QWidget" name="settingsTab1">
              <attribute name="title">
@@ -2291,6 +2291,50 @@ QLineEdit, QDateTimeEdit, QComboBox, QDoubleSpinBox {
                  </widget>
                 </item>
                </layout>
+              </item>
+             </layout>
+            </widget>
+            <widget class="QWidget" name="settingsTab3">
+             <attribute name="title">
+              <string>RAPPEL D'ADHÉSION</string>
+             </attribute>
+             <layout class="QVBoxLayout" name="verticalLayout_30">
+              <item>
+               <widget class="QCheckBox" name="bodyCheckBox">
+                <property name="text">
+                 <string>Activé</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QWidget" name="bodyWidget" native="true">
+                <layout class="QVBoxLayout" name="verticalLayout_29">
+                 <item>
+                  <widget class="QLabel" name="bodyLabel">
+                   <property name="text">
+                    <string>Corps du mail de rappel d'adhésion</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QPlainTextEdit" name="bodyTextEdit"/>
+                 </item>
+                 <item>
+                  <widget class="QLabel" name="bodyLabel_2">
+                   <property name="text">
+                    <string>Vous pouvez utiliser les alias $prenom_dest, $nom_fam_dest, $nom_refuge, $telephone_refuge, $adresse_refuge, $date_exp.</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QLabel" name="label">
+                   <property name="text">
+                    <string>Le rappel sera envoyé un mois avant la date d'expiration de l'adhésion lors de la synchronisation au serveur.</string>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </widget>
               </item>
              </layout>
             </widget>
@@ -3551,6 +3595,22 @@ color:#212834;</string>
   <tabstop>adoptionDemandTable</tabstop>
   <tabstop>vetAddButton</tabstop>
   <tabstop>vetTable</tabstop>
+  <tabstop>otherTypeEdit</tabstop>
+  <tabstop>sponsorsTabWidget</tabstop>
+  <tabstop>startDateSponsorsEdit</tabstop>
+  <tabstop>endDateSponsorsEdit</tabstop>
+  <tabstop>amountSponsorsEdit</tabstop>
+  <tabstop>groupedVetScrollArea</tabstop>
+  <tabstop>groupedVetButton</tabstop>
+  <tabstop>groupedPdfButton</tabstop>
+  <tabstop>saveSettingsButton</tabstop>
+  <tabstop>settingsTabWidget</tabstop>
+  <tabstop>maxDogsSpin</tabstop>
+  <tabstop>maxDaysSpin</tabstop>
+  <tabstop>oldCheckBox</tabstop>
+  <tabstop>pastSponsorsCheckbox</tabstop>
+  <tabstop>sponsorsAddButton</tabstop>
+  <tabstop>sponsorsTable</tabstop>
  </tabstops>
  <resources/>
  <connections/>
